add husky pre commit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
     "lint": "eslint -c .eslintrc.js --ext .js, .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "prepare": "husky install"
   },
   "author": "Oleh Lavryk",
   "license": "MIT",
@@ -21,6 +22,7 @@
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "husky": "^8.0.0"
   }
 }
