--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
     "mongoose": "^6.8.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
+    "husky": "^8.0.0",
     "nodemon": "^2.0.20",
-    "prettier": "^2.8.1",
-    "husky": "^8.0.0"
+    "prettier": "^2.8.1"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
