--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node backend/server.js",
     "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
     "lint": "eslint -c .eslintrc.js --ext .js, .",
     "lint:fix": "npm run lint -- --fix",
     "prepare": "husky install"
