--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix frontend",
     "lint": "eslint -c .eslintrc.js --ext .js, .",
     "lint:fix": "npm run lint -- --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Oleh Lavryk",
   "license": "MIT",
